--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.18",
     "@xyflow/react": "^12.10.0",
     "autoprefixer": "^10.4.23",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "docx": "^9.5.1",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
