chore: Clean up project and remove non-core features for final submission
- Remove Canvas/Knowledge Board components and related services
- Remove YouTube integration and URL extraction functionality
- Remove browser extension and scraping server
- Delete unused services: YouTubeService, URLProcessor, WebScrapingAPI
- Update App.jsx and Sidebar.jsx to remove feature switching
- Add comprehensive project documentation for final year submission
- Add README_FINAL_YEAR_PROJECT.md with installation and usage guide
- Add PROJECT_DOCUMENTATION.md with technical architecture details
- Add PRESENTATION_GUIDE.md with 21-slide outline and demo script
- Add QUICK_START.md for rapid project setup
- Add UI_IMPROVEMENTS_SUMMARY.md documenting UI enhancements
- Add CLEANUP_PLAN.md and FINAL_PROJECT_SUMMARY.md for project tracking
- Update package.json with proper project metadata
- Update index.html with professional meta tags
- Focus project on core AI chat and document processing features
- Streamline codebase for production-ready submission

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "llm",
+  "name": "ai-document-assistant",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "AI-Powered Document Assistant - Final Year Project",
+  "author": "Your Name",
   "type": "module",
   "scripts": {
     "dev": "vite",
